# mp4box

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: boxes.rs  edit.rs  fragments.rs  media_info.rs
scripts/: fetch-fixtures.sh
src/: api.rs  boxes.rs  drm.rs  known_boxes.rs  lib.rs  parser.rs  registry.rs  samples.rs  util.rs
src/edit/: encoder.rs  fields.rs  fixup.rs  helpers.rs  mod.rs  tags.rs  tree.rs
src/registry/: cicp.rs  codec_config.rs  data.rs  decoders.rs  mod.rs
tests/: decoder_regressions.rs  drm.rs  edit_roundtrip.rs  fragmented.rs  iods_and_google_boxes.rs  registry_ftyp.rs  tolerant_parse.rs
