[package]
name = "mp4box"
version = "0.8.0"
edition = "2024"
description = "Minimal MP4/ISOBMFF parser with JSON output, box decoding, and UUID support"
license = "MIT"
repository = "https://github.com/alfg/mp4box"

[lib]
name = "mp4box"
path = "src/lib.rs"

[[bin]]
name = "mp4dump"
path = "src/bin/mp4dump.rs"

[[bin]]
name = "mp4info"
path = "src/bin/mp4info.rs"

[[bin]]
name = "mp4samples"
path = "src/bin/mp4samples.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "boxes"
path = "examples/boxes.rs"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
