[package]
name = "mp4box"
version = "0.11.0"
edition = "2024"
rust-version = "1.88"
description = "MP4/ISOBMFF parser and editor: box trees, typed decoding, sample tables, fragmented MP4, and non-destructive editing"
license = "MIT"
repository = "https://github.com/alfg/mp4box"
keywords = ["mp4", "isobmff", "video", "parser", "media"]
categories = ["multimedia::video", "parser-implementations"]

[features]
default = ["edit", "cli"]
# Non-destructive box editing (Editor, mp4edit). No extra dependencies.
edit = []
# Command-line tools (mp4dump, mp4info, mp4samples, mp4edit); pulls in
# clap and serde_json. Library consumers can opt out:
#   mp4box = { version = "...", default-features = false, features = ["edit"] }
cli = ["dep:clap", "dep:serde_json"]

[lib]
name = "mp4box"
path = "src/lib.rs"

[[bin]]
name = "mp4dump"
path = "src/bin/mp4dump.rs"
required-features = ["cli"]

[[bin]]
name = "mp4info"
path = "src/bin/mp4info.rs"
required-features = ["cli"]

[[bin]]
name = "mp4samples"
path = "src/bin/mp4samples.rs"
required-features = ["cli"]

[[bin]]
name = "mp4edit"
path = "src/bin/mp4edit.rs"
required-features = ["cli", "edit"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "boxes"
path = "examples/boxes.rs"

[[example]]
name = "edit"
path = "examples/edit.rs"
required-features = ["edit"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
